--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Configurations
 title:            Jekyll Gitbook
 longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+author:           MCXQH
+email:            mcxqh1712908042@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
+url:              'https://xendqiehit.github.io/'
+baseurl:          '/CloudNote'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
